--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,4 @@
-.logo {
-  float: left;
-  width: 120px;
-  height: 31px;
-  margin: 16px 24px 16px 0;
-  background: rgba(255, 255, 255, 0.3);
-}
+
 
 .site-layout-background {
   background: #fff;
@@ -22,12 +16,12 @@
   padding: 0 24px;
 }
 
+
 .logo {
-  width: 120px;
-  height: 31px;
-  background: rgba(255, 255, 255, 0.2);
-  margin: 16px 24px 16px 0;
+    width: 120px;  /* Increased from 120px */
+  height: 40px;  /* Increased from 31px */
   float: left;
+  background: url('./logo.png') no-repeat;
 }
 
 .ant-menu {
